Theme: removed or changed occurrences of zoom. Fixes #7975 - Remove invalid CSS for legacy browsers
Because of overlapping issues, this also reverts most of e77edc60 and fixes it in a different way.

--- a/themes/base/jquery.ui.core.css
+++ b/themes/base/jquery.ui.core.css
@@ -43,7 +43,7 @@
 	clear: both;
 }
 .ui-helper-clearfix {
-	zoom: 1;
+	min-height: 0; /* for IE7 */
 }
 .ui-helper-zfix {
 	width: 100%;
